--- a/assets/scss/layouts/products/_productView.scss
+++ b/assets/scss/layouts/products/_productView.scss
@@ -53,7 +53,7 @@
     @include breakpoint("large") {
         clear: right;
         float: right;
-        width: grid-calc(6, $total-columns);
+        // width: grid-calc(6, $total-columns);
     }
 
     .productView-title {
