--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -57,7 +57,7 @@
             {{/and}}
 
             {{#if settings.address}}
-            <article class="footer-info-col footer-info-col--small" data-section-type="storeInfo">
+            <article class="footer-info-col" data-section-type="storeInfo">
                 <h5 class="footer-info-heading">{{lang 'footer.info'}}</h5>
                 <address>{{nl2br settings.address}}</address>
                 {{#if settings.phone_number}}
