--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -96,6 +96,14 @@
                     </a>
                 </li>
             {{/each}}
+            <!-- If video present, display icon -->
+            {{#if product.videos.list.length}}
+            <li class="productView-thumbnail">
+                <a class="productView-thumbnail-link" href=".videoGallery">
+                    <img class="lazyautosizes lazyloaded" data-sizes="auto" src="{{cdn "img/youtube-thumbnail.jpg"}}" data-src="https://cdn8.bigcommerce.com/s-1o6e0ubibu/images/stencil/50x50/products/5/5/50-contour_1024x10242x__77743.1511224742.jpg?c=2" alt="Video" title="Videos of this product" sizes="50px">
+                </a>
+            </li>
+            {{/if}}
         </ul>
     </section>
 
@@ -284,3 +292,23 @@
     <div class="modal-content"></div>
     <div class="loadingOverlay"></div>
 </div>
+
+<script>
+    // Scroll to specific values
+    // scrollTo is the same
+    window.scroll({
+    top: 2500, 
+    left: 0, 
+    behavior: 'smooth' 
+    });
+
+    // Scroll certain amounts from current position 
+    window.scrollBy({ 
+    top: 100, // could be negative value
+    left: 0, 
+    behavior: 'smooth' 
+    });
+    document.querySelector('.videoGallery').scrollIntoView({ 
+        behavior: 'smooth' 
+    });
+</script>
